remove old code, fix menu z-index position

--- a/src/css/_main-menu.scss
+++ b/src/css/_main-menu.scss
@@ -4,32 +4,9 @@
         position: relative;
 
         ul {
+            z-index: 2;
             justify-content: center;
             position: relative;
-
-            // &::before {
-            //     content: "<PieroNanni>";
-            //     position: absolute;
-            //     top: -5px;
-            //     height: 10px;
-            //     // width: 10px;
-            //     // background-color: red;
-            //     left: calc(50% - 230px);
-
-            //     font-family: monospace, monospace;
-            // }
-
-            // &::after {
-            //     content: "</PieroNanni>";
-            //     position: absolute;
-            //     top: -5px;
-            //     height: 10px;
-            //     // width: 10px;
-            //     // background-color: blue;
-            //     right: calc(50% - 230px);
-
-            //     font-family: monospace, monospace;
-            // }
 
             li {
                 margin: 0 5px;
